# kernelplayground

./: .gitignore  CMakeLists.txt  Kbuild  generate_vmlinux.h.sh  hello.c
cmake/: FindKernelHeaders.cmake
include/: vmlinux.h
src/: bpftest.c  hello.c
